--- a/Company.PL/Views/Role/Edit.cshtml
+++ b/Company.PL/Views/Role/Edit.cshtml
@@ -10,6 +10,9 @@
 
     <partial name="PartialViews/CreateEditRolePartial" />
 
+    <div>
+        <a asp-action="AddOrRemoveUser" class="btn btn-info my-4" asp-route-roleId="@Model.Id">Add Or Remove User</a>
+    </div>
     <input type="submit" value="Save" class="btn btn-primary" /> |
     <a asp-action="Index" class="btn btn-light">Cancel</a>
 </form>
